<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.Home">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardElevation="@dimen/nav_header_vertical_spacing"
                app:layout_constraintBottom_toTopOf="@+id/slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/websites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="10dp"
                        android:text="@string/websites"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/abesitImage"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toStartOf="@+id/moodleImage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/websites"
                        app:srcCompat="@mipmap/ccu" />

                    <ImageView
                        android:id="@+id/moodleImage"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toStartOf="@+id/aktuImage"
                        app:layout_constraintStart_toEndOf="@+id/abesitImage"
                        app:layout_constraintTop_toBottomOf="@+id/websites"
                        app:srcCompat="@mipmap/admitcard"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/aktuImage"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toStartOf="@+id/oneviewImage"
                        app:layout_constraintStart_toEndOf="@+id/moodleImage"
                        app:layout_constraintTop_toBottomOf="@+id/websites"
                        app:srcCompat="@mipmap/webportal" />

                    <ImageView
                        android:id="@+id/oneviewImage"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/aktuImage"
                        app:layout_constraintTop_toBottomOf="@+id/websites"
                        app:srcCompat="@mipmap/result2" />

                    <ImageView
                        android:id="@+id/moreImage"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/websites"
                        app:srcCompat="@drawable/ic_more_horiz_black_24dp" />

                    <TextView
                        android:id="@+id/abesitTestView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:textSize="10dp"
                        android:text="@string/website1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/abesitImage"
                        app:layout_constraintStart_toStartOf="@+id/abesitImage"
                        app:layout_constraintTop_toBottomOf="@+id/abesitImage" />

                    <TextView
                        android:id="@+id/moodleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:textSize="10dp"
                        android:text="@string/website2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/moodleImage"
                        app:layout_constraintStart_toStartOf="@+id/moodleImage"
                        app:layout_constraintTop_toBottomOf="@+id/moodleImage" />

                    <TextView
                        android:id="@+id/aktuTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:textSize="10dp"
                        android:text="@string/website3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/aktuImage"
                        app:layout_constraintStart_toStartOf="@+id/aktuImage"
                        app:layout_constraintTop_toBottomOf="@+id/aktuImage" />

                    <TextView
                        android:id="@+id/oneviewTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:textSize="10dp"
                        android:text="@string/website4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/oneviewImage"
                        app:layout_constraintStart_toStartOf="@+id/oneviewImage"
                        app:layout_constraintTop_toBottomOf="@+id/oneviewImage" />

                    <TextView
                        android:id="@+id/moreTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:textSize="10dp"
                        android:text="@string/more"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/moreImage"
                        app:layout_constraintStart_toStartOf="@+id/moreImage"
                        app:layout_constraintTop_toBottomOf="@+id/moreImage" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toStartOf="@+id/moreImage"
                        app:layout_constraintStart_toEndOf="@+id/oneviewImage"
                        app:layout_constraintTop_toBottomOf="@+id/websites"
                        app:srcCompat="@mipmap/result" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/website5"
                        android:textSize="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        app:layout_constraintVertical_bias="0.6" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <ir.apend.slider.ui.Slider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:animateIndicators="true"
                app:defaultIndicators="circle"
                app:indicatorSize="8dp"
                app:intervalSecond="5"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:loopSlides="true" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardElevation="@dimen/round_square_indicator_radius"
                app:layout_constraintBottom_toTopOf="@+id/cardView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slider">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>